Fiddling with the code still, more progress done

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="container"></div>
-    <button id='reset'>Reset</button>
+    <div class ="options">
+        <button id="reset">Reset</button>
+        <input type="number" id="grid" name="grid" min="1" max="100" />
+    </div>
 </body>
 </html>
