--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Etch-A-Sketch</title>
     <script src="etchASketch.js" defer></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+    <div class="grid"></div>
     <div class ="options">
+        <input type="number" id="gridNum" name="grid" min="1" max="64" value="16"/>
+        <button id="change">Change Grid Size</button>
         <button id="reset">Reset</button>
-        <input type="number" id="grid" name="grid" min="1" max="100" />
     </div>
+</div>
+
 </body>
 </html>
