--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
     <title>Etch-A-Sketch</title>
     <script src="etchASketch.js" defer></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="etch-a-sketch.png">
 </head>
 <body>
+    <h1>Etch-A-Sketch</h1>
     <div class="container">
-    <div class="grid"></div>
-    <div class ="options">
-        <input type="number" id="gridNum" name="grid" min="1" max="64" value="16"/>
-        <button id="change">Change Grid Size</button>
-        <button id="reset">Reset</button>
+        
+        <div class="grid"></div>
+       
+        <div class ="options">
+            <h3>Grid size will not go past 64!</h3>
+            <input type="number" id="gridNum" name="grid" min="1" max="64" value="16"/>
+            <button id="change">Change Grid Size</button>
+            <button id="reset">Reset</button>
+        </div>
     </div>
-</div>
 
 </body>
 </html>
